iptables-example
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
#
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A INPUT -i lo -j ACCEPT
#
-A INPUT -p tcp -m tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -m comment --comment "SSH all acces" -j ACCEPT
-A INPUT -s 8.8.8.8 -m comment --comment "Allow All from IP" -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -m comment --comment http -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
COMMIT
